<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/Details_textView_accessGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/DetailsTextAccessGroup"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Details_textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/DetailsTextName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Details_textView_accessGroupName" />

    <TextView
        android:id="@+id/Details_textView_modified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:text="@string/DetailsTextDate"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/Details_textView_modified_string"
        app:layout_constraintStart_toEndOf="@+id/Details_textView_modified_string"
        app:layout_constraintTop_toTopOf="@+id/Details_textView_modified_string" />

    <TextView
        android:id="@+id/Details_textView_totalUses_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:text="@string/DetailsTextTotalUsesNum"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/Details_textView_totalUses_string"
        app:layout_constraintStart_toEndOf="@+id/Details_textView_totalUses_string"
        app:layout_constraintTop_toTopOf="@+id/Details_textView_totalUses_string"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Details_textView_totalUses_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/DetailsTextTotalUsesString"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Details_textView_name"
        app:layout_constraintTop_toBottomOf="@+id/Details_textView_name" />

    <TextView
        android:id="@+id/Details_textView_modified_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/DetailsTextDateString"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Details_textView_totalUses_string"
        app:layout_constraintTop_toBottomOf="@+id/Details_textView_totalUses_string" />

</androidx.constraintlayout.widget.ConstraintLayout>